# dagium

./: .gitignore  README.md  main.py  setup.cfg
dag/: __init__.py  dag.py
dagium/: __init__.py  config.py  future.py
dagium/dag/: __init__.py  dag.py  dagexecutor.py
dagium/data/: __init__.py  data.py
dagium/execution/: __init__.py  context.py  dagexecutor.py  executors.py  processors.py  selectors.py
dagium/executors/: __init__.py  executors.py
dagium/operators/: __init__.py  callasync.py  map.py  mapreduce.py  operator.py
data/: __init__.py  data.py
execution/: __init__.py  context.py  dagexecutor.py
operators/: __init__.py  callasync.py  map.py  mapreduce.py  operator.py
