[metadata]
name = dagium
version = 0.0.1
author = Stepan Klymonchuk
description = DAGium is a Python library for creating and executing Directed Acyclic Graphs (DAGs) of tasks on top of Lithops
project_urls =
    Source = https://github.com/bystepii/dagium
url = https://github.com/bystepii/dagium
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing

[options]
install_requires =
    lithops
    cloudpickle
package_dir =
    = dagium
packages = find:
python_requires = >=3.6

[options.packages.find]
where = dagium
